--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
-    <title>xcstream</title>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>xcstream</title>
+    </head>
     <body>
-        mainpage
+        <a href="/whoweare">我们是谁</a>
+        <a href="/achat">尬聊</a>
     </body>
 </html>
 
